--- a/react-demo/src/components/Footer/Footer.css
+++ b/react-demo/src/components/Footer/Footer.css
@@ -16,7 +16,7 @@
     .contact {
         margin-bottom: 84px;
         font-weight: 800;
-        text-align: right;
+        
         
     }
        
@@ -40,5 +40,7 @@
         .footer__title{
             margin:0;
         }
-        
+        .contact{
+            text-align: right;
+        }
 }
